Added fancy table support - package booktabs.

--- a/my-report.sty
+++ b/my-report.sty
@@ -98,6 +98,9 @@
 % some constants - add per project with commmand \newcommand,
 % NB: to add upright letters, always use \mathrm{}
 
+% Tables support
+\usepackage{booktabs}
+\usepackage{multirow}
 
 %%% References
 % Bibliography
