--- a/SS16-shil5377-LyubomirShoylev.tex
+++ b/SS16-shil5377-LyubomirShoylev.tex
@@ -10,6 +10,7 @@
 \newcommand{\reminder}[1]{\textcolor{red}{#1}}
 \newcommand{\rydberg}{\mathrm{R}}
 \newcommand{\Kalpha}{$\mathrm{K}_\alpha$}
+\newcommand{\Lalpha}{$\mathrm{L}_\alpha$}
 \begin{document}
 \maketitle
 
@@ -21,29 +22,58 @@
 
 X-rays are an important experimental tool and have been for more than a 100 years now --- from the first Nobel Prize for their discovery, and still now. In this experiment, we will first verify Moseley's Law, and then use X-ray spectroscopy to analyse several samples of metal as well as coins from various places around the world.\reminder{finish this intro at the end.} %TODO
 
-Let us first write some of the theory we need to understand the phenomena at hand.
-
-% add only if really needed. %QUESTION
-% \subsection{X-ray Scattering}
-% We usually expose a sample to a beam of X-rays, so it is useful to think how they are scattered by the crystal structure. We can label the incident and diffracted X-rays by their wave vector $\vec{k}$ and $\vec{k'}$ respectively. Then, the transition rate is given by Fermi's golden rule:
-% \begin{equation}
-%     \Gamma \left( \vec{k}, \vec{k'} \right) = \frac{2 \pi}{\hbar} \left| \left\langle \vec{k} \middle| V \middle| \vec{k'} \right\rangle \right|^2 \delta\left(E_{\vec{k}} - E_{\vec{k'}}\right)
-% \end{equation}
-% where $V = V\left(\vec{r}\right)$ is the scattering potential of the crystal. A more detailed derivation can be found in the \reminder{reference of book by S. Simon}.
+First, we examine some of the background theory behind X-rays and their production.
 
 \subsection{X-ray atomic spectra}
-
-The emission spectra of atoms is due to energy transition of shell electrons from a higher energy level to a lower energy level. We are interested in X-rays specifically, which are due to inner electron levels. These are shielded from the outer electron layers (that is, for sufficiently high $Z$) and are mostly unaffected by the chemical composition of the sample i.e. by the surrounding atoms. Therefore, we can take an energy level of an electron to be $E_n = -\frac{\rydberg\left(Z\right)}{n^2}$ where $\rydberg = \rydberg_\infty \left(Z - b\right)^2$ is the modified Rydberg constant for a given $Z$, $b$ is some parameter, and $R_\infty$ is the hydrogen Rydberg constant. Then, the energy of an emitted photon by a transition from level $n_\mathrm{i}$ to $n_\mathrm{f}$ is given by:
+The emission spectra of atoms is due to energy transition of shell electrons from a higher energy level to a lower energy level. We are interested in X-rays specifically, which are due to transitions in the inner electron levels. These are shielded from the outer electron layers (the higher $Z$, the better the shielding \reminder{CHECK}) and are mostly unaffected by the chemical structure of the sample i.e. by the surrounding atoms. Therefore, we can take an energy level of an electron to be $E_n = -\rydberg\left(Z\right) / n^2$ where $\rydberg = \rydberg_\infty \left(Z - b\right)^2$ is the modified Rydberg constant for a given $Z$, $b$ is some parameter, and $R_\infty$ is the hydrogen Rydberg constant. Then, the energy of an emitted photon by a transition from level $n_\mathrm{i}$ to $n_\mathrm{f}$ is given by:
 \begin{equation}
     \varepsilon = \rydberg\left(Z\right) \left(\frac{1}{n_\mathrm{f}^2} - \frac{1}{n_\mathrm{i}^2}\right).
 \end{equation}
 We can rewrite this at fixed $n_\mathrm{i}$, $n_\mathrm{f}$ (i.e. for a given line) as $\sqrt{\varepsilon} = m \times Z + C$ where $m$, $C$ are some constants. This relationship is known as `Moseley's Law'.
 
+The names of the energy levels of low-$n$ in X-ray notation is described in table \ref{tab:x-ray-notation}. Usually, the lines which are due to an initial absence in level K1 are referred to K-series; similarly for L-series and so on.
+\begin{table}[!htb]
+    \centering
+    \begin{tabular}{@{}llllll@{}}
+    \toprule
+    \multicolumn{4}{l}{Quantum numbers} & \multirow{2}{*}{Atomic notation} & \multirow{2}{*}{X-ray notation} \\ \cmidrule(r){1-4}
+    n      & l      & s       & j       &                                  &                                 \\ \midrule
+    1      & 0      & 1/2     & 1/2     & 1S1/2                            & K1                              \\
+    2      & 0      & 1/2     & 1/2     & 2S1/2                            & L1                              \\
+    2      & 1      & 1/2     & 1/2     & 2P1/2                            & L2                              \\
+    2      & 1      & 1/2     & 3/2     & 2P3/2                            & L3                              \\
+    3      & 0      & 1/2     & 1/2     & 3S1/2                            & M1                              \\
+    3      & 1      & 1/2     & 1/2     & 3P1/2                            & M2                              \\
+    3      & 1      & 1/2     & 3/2     & 3P3/2                            & M3                              \\
+    3      & 2      & 1/2     & 3/2     & 3D3/2                            & M4                              \\
+    3      & 2      & 1/2     & 5/2     & 3D5/2                            & M5                              \\ \bottomrule
+    \end{tabular}
+    \caption{Table describing the connection between X-ray notation and Atomic notation. \reminder{cite source would be nice. Maybe add the old Siegbahn notation?}}
+    \label{tab:x-ray-notation}
+\end{table}
+
+\reminder{Describe the flourescence effect.}
+
 \subsection{X-ray production}
-\reminder{Explain how x-rays are produced experimentally - both the x-ray peaks and the background bremsstrahlung}
+In practice, we produce X-rays by bombarding a sample of some material with high energy electrons or X-rays which removes one of the inner shell electrons from the sample atom. This produces a vacancy in the shell. It is filled by some electron of a higher $n$ orbit (see \reminder{ref fig below here}), and the fall of potential energy of the electron is compensated by an emitted X-ray (ignoring higher order effects like the \emph{Auger effect}).
+\reminder{Include a picture to illustrate the effect - similar to lecture picture for Auger effect.}
+
+Suppose we use an X-ray source for the production of X-rays form our sample.
+
+Usually, small laboratory X-ray tubes use an electron source. Because of that, we observe a continuum of X-ray radiation imposed on top of the emission lines. This radiation is called \emph{bremsstrahlung} ("braking") radiation. Its source is the interaction between decelerating electrons and stationary charges in the sample lattice. The maximal energy of a bremsstrahlung continuum is limited by the energy of the decelerating particle. If electrons accelerated by a potential difference $V$, then the maximal energy is given by:
+\begin{equation}
+    \varepsilon_\mathrm{max} = eV
+\end{equation}
+
+\subsection{Composition analysis}
+Explain how the fluorescence gives signal that can be used for spectral analysis of the sample in its composition. Derive equations:
+\begin{equation}
+   k = \frac{I_i}{I_j} = \frac{n_i}{n_j}, \text{$n_i$ is number density} \Rightarrow n_i = \frac{1}{1+k} n
+\end{equation}
+Can use this equations later.
 
 \section{Experiment}
-% If Laue gives sth, inlcude
+% If Laue gives sth, include
 % The experiment features a molybdenum block X-ray source with an aperture, as well as film for the Laue photography and an X-ray spectroscope for the second part of the experiment.
 
 % \subsection{X-ray spectroscopy}
@@ -51,57 +81,51 @@ Rather than use the \Kalpha lines of the molybdenum, we will use the remaining `
 
 Before we can make any claims about composition of our samples, we need to confirm the validity of Moseley's Law. Then, having confirmed it, we now know that by measuring the \Kalpha emission lines in the spectrum, we will know the composition.
 
-Our experiment consists of the following setup. First, we have an X-ray source with a molybdenum anode, which produces some characteristic \Kalpha x-rays that can be used for diffraction experiments (see the first experiment part of SS16 \reminder{put reference}) and some continuous bremsstrahlung (see chap 1.2 for explanation \reminder{put reference}). These X-rays are focused through a circular aperture towards a target sample. The incident X-rays excite inner shell electrons, and the targets emit (omnidirectionally) mostly in the characteristic X-rays of $K$,$L$, and $M$ series. We detect these via an energy spectrometer that is sensitive in the region of our experiment. The setup parameters are:  \reminder{write out parameters}. This allows us to produce X-rays from samples with atomic numbers \reminder{calculate}. These are a large part of the most commonly used materials in practice, e.g. copper.
+Our experiment consists of the following setup. First, we have an X-ray source with a molybdenum anode, which produces some characteristic \Kalpha X-rays that can be used for diffraction experiments (see the first experiment part of SS16 \reminder{put reference}) and some continuous bremsstrahlung (see chap 1.2 for explanation \reminder{put reference}). These X-rays are focused through a circular aperture towards a target sample. The incident X-rays excite inner shell electrons, and the targets emit (omnidirectionally) mostly in the characteristic X-rays of $K$,$L$, and $M$ series. We detect these via an energy spectrometer that is sensitive in the region of our experiment. The setup parameters are:  \reminder{write out parameters}. This allows us to produce X-rays from samples with atomic numbers \reminder{calculate}. These are a large part of the most commonly used materials in practice, e.g. copper. \reminder{Picture}
+
+The first part of the experiment will test the validity of Moseley's Law with the help of several samples of known substances.
+
+The second part and third part of the experiment will utilise our knowledge about X-rays to learn more about some samples provided for us, and about some metal coins from around the world.
 
 % \subsection{Laue photography}
 % \reminder{UNDER CONSTRUCTION}
 
-\section{Result}
-We begin by verifying Moseley's Law. After that, we proceed with all of the samples that we can test --- first, some of the provided alloys, then we move on to cross-check the semiconductors from the first part of the experiment, and last we test the composition of \reminder{number} of coins that are available in the physics laboratory.
+\section{Result and Analysis}
+Before we can do any work that has to do with determining energies or using energy values from a database, need to set the scaling of the measurement apparatus. We will do so with two of the labelled provided samples - for Iron and Silver. These cover a wide range of values in the bremsstrahlung spectrum, so they are a good way to set the scaling. 
+
+\reminder{put a picture of the settings, maybe screenshot?}
 
 \subsection{Moseley's Law}
+We measure the line energy values from the labelled samples. These are mainly in two groups:
+\begin{itemize}
+    \item those, whose \Kalpha lines lie in the observable range (excluding our two calibration points);
+    \item those, whose \Lalpha lines lie in the observable range.
+\end{itemize}
+We expect to see a straight line fit for the two groups of lines. (Explain a bit more what and why).
+
+Results presented in \reminder{ref figure}.
+
+We see that these both follow our expectations - have good fits to the model. We can deduce that our description of X-ray emission works sufficiently well for our purposes (given experimental accuracy etc), so we can proceed to use X-ray K and L series lines as a signature of a given element in spectral analysis.
 
 \subsection{Provided alloys and semiconductors}
+Now, can move to more interesting analysis. We will use the fluorescence to determine the composition of the semiconductors from the non-MP part and of some unlabelled samples that are provided in the physics lab.
+
+\subsubsection{Semiconductors}
+The semiconductors are part of the non-MP experiment, where we determined their structure by determination of the lattice constant. Here, we provide an independent confirmation of our previous results. 
+
+\subsubsection{Unlabelled alloys}
+The lab has two boxes of unlabelled metallic samples - alloys of different metals. We can determine their composition and ratios by using \reminder{ref 1.3}.
 
 \subsection{International coins}
+This is our final task. The lab has a box of various coins from around the world, the content of which we can again interpret using our fluorescence method.
 
-\section{Analysis}
-\lipsum
+The results can be summarised in the following table:
+\reminder{include table for coins}
+We can see that almost all coins are made of an alloy featuring Ni, Ci, or Zn. \reminder{discuss why}
+
+\reminder{maybe additional analysis based on raw material cost of coins + a deeper inquiry?}
 
 \section{Conclusions}
-\lipsum
+\lipsum[1-5]
 
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
-
-\lipsum
 \end{document}
