Added support for better list structures.

--- a/my-report.sty
+++ b/my-report.sty
@@ -65,6 +65,9 @@
 \captionsetup{justification=centering,font={small,sf}}
 \usepackage{subcaption}
 
+% Better list environments (eg noitemsep in itemize)
+\usepackage{enumitem}
+
 % Colour support
 \usepackage[dvipsnames]{xcolor}
 
