--- a/SS16-shil5377-LyubomirShoylev.tex
+++ b/SS16-shil5377-LyubomirShoylev.tex
@@ -11,6 +11,7 @@
 \newcommand{\rydberg}{\mathrm{R}}
 \newcommand{\Kalpha}{$\mathrm{K}_\alpha$~}
 \newcommand{\Lalpha}{$\mathrm{L}_\alpha$~}
+
 \begin{document}
 \maketitle
 
@@ -53,8 +54,13 @@ The names of the energy levels of low-$n$ in X-ray notation is described in tabl
 \end{table}
 
 \subsection{X-ray production}\label{subsec:x-ray-production}
-In practice, we produce X-rays by bombarding a sample of some material with high energy electrons or X-rays which removes one of the inner shell electrons from the sample atom. This produces a vacancy in the shell. The vacancy is filled by some electron of a higher $n$ orbit (see \reminder{ref fig below here}), and the fall of potential energy of the electron is compensated by an emitted X-ray (ignoring higher order effects like the \emph{Auger effect}).
-\reminder{Include a picture to illustrate the effect - similar to lecture picture for Auger effect.}
+In practice, we produce X-rays by bombarding a sample of some material with high energy electrons or X-rays which removes one of the inner shell electrons from the sample atom. This produces a vacancy in the shell. The vacancy is filled by some electron of a higher $n$ orbit (see figure \ref{fig:emission-diagram}), and the fall of potential energy of the electron is compensated by an emitted X-ray (ignoring higher order effects like the \emph{Auger effect}).
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{img/emission-diagram.png}
+    \caption{Schematic of the emission process.}\label{fig:emission-diagram}
+\end{figure}
 
 Usually, small laboratory X-ray tubes use an electron source. Because of that, we observe a continuum of X-ray radiation imposed on top of the emission lines. This radiation is called \emph{bremsstrahlung} ("braking") radiation. Its source is the interaction between decelerating electrons and stationary charges in the sample lattice. The maximal energy of a bremsstrahlung continuum is limited by the energy of the decelerating particle. If electrons accelerated by a potential difference $V$, then the maximal energy is given by:
 \begin{equation}
@@ -76,35 +82,53 @@ This tells us that:
 where $n_\mathrm{a}$ and $n_\mathrm{b}$ are the number densities of materials a and b. From that, we could easily calculate percentage compositions for number densities or mass densities ($\rho = n \times (\text{molar mass})$).
 
 \section{Experiment}
-% If Laue gives sth, include
-% The experiment features a molybdenum block X-ray source with an aperture, as well as film for the Laue photography and an X-ray spectroscope for the second part of the experiment.
+Our experiment consists of the following setup see figure \ref{fig:experim-setup}. First, we have an X-ray source with a molybdenum anode, which produces some characteristic \Kalpha X-rays that can be used for diffraction experiments (see the first experiment part of SS16 \reminder{put reference}) and some continuous bremsstrahlung (see section \ref{subsec:x-ray-production} for more details). These X-rays are focused through a circular aperture towards a target sample. The incident X-rays excite inner shell electrons, and the targets emit mostly in the characteristic X-rays of K,L, and M series. We detect these via an energy spectrometer that is sensitive in the region of our experiment. The setup parameters are: tube voltage $V = \SI{35}{kV}$, emission current \SI{1}{A}, exposure time $t=$\reminder{ask Darryl}. This allows us to produce X-rays from samples with atomic numbers \reminder{calculate}. These are a large part of the most commonly used materials in practice, e.g. copper.
 
-% \subsection{X-ray spectroscopy}
-Our experiment consists of the following setup see \reminder{fig reference}. First, we have an X-ray source with a molybdenum anode, which produces some characteristic \Kalpha X-rays that can be used for diffraction experiments (see the first experiment part of SS16 \reminder{put reference}) and some continuous bremsstrahlung (see section \ref{subsec:x-ray-production} for more details). These X-rays are focused through a circular aperture towards a target sample. The incident X-rays excite inner shell electrons, and the targets emit mostly in the characteristic X-rays of K,L, and M series. We detect these via an energy spectrometer that is sensitive in the region of our experiment. The setup parameters are: tube voltage $V = \SI{35}{kV}$, emission current \SI{1}{A}, exposure time $t=$\reminder{ask Darryl}. This allows us to produce X-rays from samples with atomic numbers \reminder{calculate}. These are a large part of the most commonly used materials in practice, e.g. copper. \reminder{Picture}
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{img/experim-setup.png}
+    \caption{Diagram of the experimental setup. More info in the text of sec 2 }\label{fig:experim-setup}
+\end{figure}
 
 The first part of the experiment will test the validity of Moseley's Law with the help of several samples of known substances.
 
 The second part and third part of the experiment will utilise our knowledge about X-rays to learn more about some samples provided for us, and about some metal coins from around the world.
 
-% \subsection{Laue photography}
-% \reminder{UNDER CONSTRUCTION}
-
 \section{Result and Analysis}
 Before we can do any work that has to do with determining energies or referring to energy values from a database, need to set the scaling of the measurement apparatus. We will do so with two of the labelled provided samples - for Fe and Ag. These cover a wide range of values in the bremsstrahlung spectrum, so they are a good way to set the scaling. The particular lines which we use to calibrate are the Fe \Kalpha with $E_\mathrm{Fe} = \SI{6.40}{keV}$ and the Ag \Kalpha with $E_\mathrm{Ag} = \SI{22.17}{keV}$.
 
-\reminder{put a picture of the settings, maybe screenshot?}
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=0.5\textwidth]{img/calib.png}
+    \caption{These are the Fe (black) and Ag (red) spectra used for calibration.}\label{fig:calibration}
+\end{figure}
 
 \subsection{Moseley's Law}
 We measure the line energy values from the labelled samples. These are mainly in two groups:
-\begin{itemize}
+\begin{itemize}[noitemsep]
     \item those, whose \Kalpha lines lie in the observable range (excluding our two calibration points);
     \item those, whose \Lalpha lines lie in the observable range.
 \end{itemize}
-We expect to see a straight line fit for the two groups of lines. (Explain a bit more what and why).
+We expect to see a straight line fit for the two groups of lines. The scaling constant $m$ depends purely on the line we are observing, i.e. on the $n_\mathrm{i}, n_\mathrm{f}$ for the given line. We can predict the ratio of the constants for the two series. Following \eqref{eqn:x-ray-energy} and Moseley's law, we get:
+\begin{equation}
+    m_\mathrm{K} \propto \left(1 - \frac{1}{2^2}\right)^{\sfrac{1}{2}} = \sqrt{\frac{3}{4}},\quad m_\mathrm{L} \propto \left(\frac{1}{2^2} - \frac{1}{3^2}\right)^{\sfrac{1}{2}} = \sqrt{\frac{5}{36}} \quad \Rightarrow \frac{m_\mathrm{K}}{m_\mathrm{L}} = \sqrt{\frac{27}{5}}
+\end{equation}
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=0.8\textwidth]{img/moseleys.png}
+    \caption{sqrt(energy) vs Z number for given samples: \reminder{list samples}.}\label{fig:moseleys}
+\end{figure}
 
-Results presented in \reminder{ref figure}.
+
+Results presented in figure \ref{fig:moseleys}.
 
 We see that these both follow our expectations - have good fits to the model. We can deduce that our description of X-ray emission works sufficiently well for our purposes (given experimental accuracy etc), so we can proceed to use X-ray K and L series lines as a signature of a given element in spectral analysis.
+
+Also, can calculate ratio from given values:
+\begin{equation}
+    \text{predicted: }\frac{m_\mathrm{K}}{m_\mathrm{L}} = \sqrt{\frac{27}{5}} = 2.324,\qquad \text{observed: } \frac{m_\mathrm{K}}{m_\mathrm{L}} = \frac{0.1026}{0.0411} = 2.496.
+\end{equation}
+Agreement is not so good, but we have not taken into account many other effects like change of energy due to being in a state $l \neq 0$ etc. So, not too bad. \reminder{can expand a bit maybe}.
 
 \subsection{Provided alloys and semiconductors}
 Now, can move to more interesting analysis. We will use the fluorescence to determine the composition of the semiconductors from the non-MP part and of some unlabelled samples that are provided in the physics lab.
