Updated siunitx convention in description.

--- a/my-report.sty
+++ b/my-report.sty
@@ -84,7 +84,10 @@
 \usepackage{amssymb}
 \usepackage{wasysym}
 
-% SI units - command \SI{value}{unit command}
+% SI units - commands
+% \qty{value}{unit command}
+% \num{value} for numerals only
+% \unit{unit} for unit only
 \usepackage{siunitx}
 % setup to display how I want it
 \sisetup{separate-uncertainty = true, multi-part-units = brackets}
